vendor/fixed-macro/tests/compile-fail/invalid-type-07.rs
fn main() {
    fixed_macro::fixed!(0: U10F11);
}
